@@ -38,198 +38,214 @@ import jakarta.validation.Valid;
 @RequestMapping("/api/recipes")
 public class RecipeController {
 
-	private final RecipeService recipeService;
-	private final RecipeServiceCreate createRecipe;
-	private final RecipeServiceDelete recipeServiceDelete;
-	private final RecipeServiceUpdate recipeServiceUpdate;
-	private final RecipeServiceRead recipeServiceRead;
-	private final RecipeServiceSummaries recipeServiceSummaries;
-	private final RecipeServiceMenus recipeServiceMenus;
+    private final RecipeService recipeService;
+    private final RecipeServiceCreate createRecipe;
+    private final RecipeServiceDelete recipeServiceDelete;
+    private final RecipeServiceUpdate recipeServiceUpdate;
+    private final RecipeServiceRead recipeServiceRead;
+    private final RecipeServiceSummaries recipeServiceSummaries;
+    private final RecipeServiceMenus recipeServiceMenus;
 
-	public RecipeController(RecipeService recipeService, RecipeServiceCreate createRecipe,
-			RecipeServiceDelete recipeServiceDelete, RecipeServiceUpdate recipeServiceUpdate,
-			RecipeServiceRead recipeServiceRead, RecipeServiceSummaries recipeServiceSummaries,
-			RecipeServiceMenus recipeServiceMenus) {
-		this.recipeService = recipeService;
-		this.createRecipe = createRecipe;
-		this.recipeServiceDelete = recipeServiceDelete;
-		this.recipeServiceUpdate = recipeServiceUpdate;
-		this.recipeServiceRead = recipeServiceRead;
-		this.recipeServiceMenus = recipeServiceMenus;
-		this.recipeServiceSummaries = recipeServiceSummaries;
-	}
+    public RecipeController(RecipeService recipeService, RecipeServiceCreate createRecipe,
+            RecipeServiceDelete recipeServiceDelete, RecipeServiceUpdate recipeServiceUpdate,
+            RecipeServiceRead recipeServiceRead, RecipeServiceSummaries recipeServiceSummaries,
+            RecipeServiceMenus recipeServiceMenus) {
+        this.recipeService = recipeService;
+        this.createRecipe = createRecipe;
+        this.recipeServiceDelete = recipeServiceDelete;
+        this.recipeServiceUpdate = recipeServiceUpdate;
+        this.recipeServiceRead = recipeServiceRead;
+        this.recipeServiceMenus = recipeServiceMenus;
+        this.recipeServiceSummaries = recipeServiceSummaries;
+    }
 
-	private boolean isAdmin(String role) {
-		return "ROLE_ADMIN".equals(role);
-	}
+    private boolean isAdmin(String role) {
+        return "ROLE_ADMIN".equals(role);
+    }
 
-	private ResponseEntity<Object> forbidden() {
-		Map<String, Object> error = new HashMap<>();
-		error.put("status", 403);
-		error.put("message", "No tienes permisos para realizar esta acción");
-		return ResponseEntity.status(HttpStatus.FORBIDDEN).body(error);
-	}
+    private ResponseEntity<Object> forbidden() {
+        Map<String, Object> error = new HashMap<>();
+        error.put("status", 403);
+        error.put("message", "No tienes permisos para realizar esta acción");
+        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(error);
+    }
 
-	@PostMapping
-	public ResponseEntity<Object> createRecipe(@RequestBody CreateRecipe dto,
-			@RequestHeader(value = "X-User-Role", defaultValue = "") String role) {
+    @PostMapping
+    public ResponseEntity<Object> createRecipe(@RequestBody CreateRecipe dto,
+            @RequestHeader(value = "X-User-Role", defaultValue = "") String role) {
 
-		if (!isAdmin(role))
-			return forbidden();
-		return ResponseEntity.ok(createRecipe.createRecipe(dto));
-	}
+        if (!isAdmin(role)) {
+            return forbidden();
+        }
+        return ResponseEntity.ok(createRecipe.createRecipe(dto));
+    }
 
-	@PutMapping("/{id}")
-	public ResponseEntity<Object> updateRecipe(@PathVariable Integer id, @Valid @RequestBody UpdateRecipes dto,
-			@RequestHeader(value = "X-User-Role", defaultValue = "") String role) {
+    @PutMapping("/{id}")
+    public ResponseEntity<Object> updateRecipe(@PathVariable Integer id, @Valid @RequestBody UpdateRecipes dto,
+            @RequestHeader(value = "X-User-Role", defaultValue = "") String role) {
 
-		if (!isAdmin(role))
-			return forbidden();
-		return ResponseEntity.ok(recipeServiceUpdate.updateRecipe(id, dto));
-	}
+        if (!isAdmin(role)) {
+            return forbidden();
+        }
+        return ResponseEntity.ok(recipeServiceUpdate.updateRecipe(id, dto));
+    }
 
-	@GetMapping("/recipeSummary")
-	public ResponseEntity<Page<RecipeResponseSummary>> getRecipeSummary(
-			@RequestHeader(value = "X-User-Id", required = false) Long userId,
-			@RequestHeader(value = "X-Tipo-Usuario", required = false) String tipoUsuario,
-			@RequestParam(defaultValue = "0") int page, @RequestParam(defaultValue = "10") int size) {
+    @GetMapping("/recipeSummary")
+    public ResponseEntity<Page<RecipeResponseSummary>> getRecipeSummary(
+            @RequestHeader(value = "X-User-Id", required = false) Long userId,
+            @RequestHeader(value = "X-Tipo-Usuario", required = false) String tipoUsuario,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size) {
 
-		if (userId == null) {
-			if (page > 0)
-				return ResponseEntity.ok(Page.empty());
-			return ResponseEntity.ok(recipeServiceSummaries.getRecipeSummary(page, 5));
-		}
+        // Log para depuración
+        System.out.println("📝 getRecipeSummary called");
+        System.out.println("    userId: " + userId);
+        System.out.println("    tipoUsuario: " + tipoUsuario);
+        System.out.println("    page: " + page + ", size: " + size);
 
-		if (!"PREMIUM".equalsIgnoreCase(tipoUsuario) && !"ADMIN".equalsIgnoreCase(tipoUsuario)) {
-			if (page >= 3)
-				return ResponseEntity.ok(Page.empty(PageRequest.of(page, size)));
-		}
+        if (userId == null) {
+            System.out.println("    → Usuario anónimo");
+            if (page > 0) {
+                return ResponseEntity.ok(Page.empty());
+            }
+            return ResponseEntity.ok(recipeServiceSummaries.getRecipeSummary(page, 5));
+        }
 
-		return ResponseEntity.ok(recipeServiceSummaries.getRecipeSummaryByUser(userId, page, size));
-	}
+        if (!"PREMIUM".equalsIgnoreCase(tipoUsuario) && !"ADMIN".equalsIgnoreCase(tipoUsuario)) {
+            System.out.println("    → Usuario NO premium");
+            if (page >= 3) {
+                return ResponseEntity.ok(Page.empty(PageRequest.of(page, size)));
+            }
+        } else {
+            System.out.println("    → Usuario PREMIUM o ADMIN");
+        }
 
-	@GetMapping("/{id}")
-	public ResponseEntity<ResponseRecipes> getRecipeById(@PathVariable Integer id) {
-		return ResponseEntity.ok(recipeServiceRead.getRecipeById(id));
-	}
+        return ResponseEntity.ok(recipeServiceSummaries.getRecipeSummaryByUser(userId, page, size));
+    }
 
-	@GetMapping("/multiple")
-	public ResponseEntity<List<RecipeResponseSummary>> getRecipesByIds(@RequestParam List<Integer> ids) {
-		return ResponseEntity.ok(recipeServiceRead.getRecipesByIds(ids));
-	}
+    @GetMapping("/{id}")
+    public ResponseEntity<ResponseRecipes> getRecipeById(@PathVariable Integer id) {
+        return ResponseEntity.ok(recipeServiceRead.getRecipeById(id));
+    }
 
-	@GetMapping
-	public ResponseEntity<Object> getAllRecipes(
-			@RequestHeader(value = "X-User-Role", defaultValue = "ROLE_GUEST") String role,
-			@RequestParam(defaultValue = "0") int page, @RequestParam(defaultValue = "10") int size) {
+    @GetMapping("/multiple")
+    public ResponseEntity<List<RecipeResponseSummary>> getRecipesByIds(@RequestParam List<Integer> ids) {
+        return ResponseEntity.ok(recipeServiceRead.getRecipesByIds(ids));
+    }
 
-		List<ResponseRecipes> recipes = recipeServiceRead.getAllRecipes(role, page, size);
+    @GetMapping
+    public ResponseEntity<Object> getAllRecipes(
+            @RequestHeader(value = "X-User-Role", defaultValue = "ROLE_GUEST") String role,
+            @RequestParam(defaultValue = "0") int page, @RequestParam(defaultValue = "10") int size) {
 
-		if (recipes == null || recipes.isEmpty()) {
-			Map<String, Object> error = new HashMap<>();
-			error.put("status", 404);
-			error.put("message", "Parece que no tenemos recetas en este momento, inténtalo de nuevo más tarde");
-			return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
-		}
+        List<ResponseRecipes> recipes = recipeServiceRead.getAllRecipes(role, page, size);
 
-		return ResponseEntity.ok(recipes);
-	}
+        if (recipes == null || recipes.isEmpty()) {
+            Map<String, Object> error = new HashMap<>();
+            error.put("status", 404);
+            error.put("message", "Parece que no tenemos recetas en este momento, inténtalo de nuevo más tarde");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
+        }
 
-	@GetMapping("/search")
-	public ResponseEntity<Object> searchRecipesByTitle(@RequestParam String title,
-			@RequestHeader(value = "X-User-Role", defaultValue = "ROLE_GUEST") String role) {
+        return ResponseEntity.ok(recipes);
+    }
 
-		List<RecipeResponseSummary> recipes = recipeServiceRead.searchRecipesByTitle(title, role);
+    @GetMapping("/search")
+    public ResponseEntity<Object> searchRecipesByTitle(@RequestParam String title,
+            @RequestHeader(value = "X-User-Role", defaultValue = "ROLE_GUEST") String role) {
 
-		if (recipes == null || recipes.isEmpty()) {
-			List<RecipeResponseSummary> suggestions = recipeServiceRead.getRandomRecipes(role, 5);
+        List<RecipeResponseSummary> recipes = recipeServiceRead.searchRecipesByTitle(title, role);
 
-			Map<String, Object> response = new HashMap<>();
-			response.put("status", 404);
-			response.put("message",
-					"Parece que no encontramos recetas con ese nombre... ¡pero tenemos estas opciones para ti!");
-			response.put("suggestions", suggestions);
+        if (recipes == null || recipes.isEmpty()) {
+            List<RecipeResponseSummary> suggestions = recipeServiceRead.getRandomRecipes(role, 5);
 
-			return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
-		}
+            Map<String, Object> response = new HashMap<>();
+            response.put("status", 404);
+            response.put("message",
+                    "Parece que no encontramos recetas con ese nombre... ¡pero tenemos estas opciones para ti!");
+            response.put("suggestions", suggestions);
 
-		return ResponseEntity.ok(recipes);
-	}
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
+        }
 
-	@GetMapping("/search/ingredient")
-	public ResponseEntity<Object> searchRecipesByIngredient(@RequestParam String ingredient,
-			@RequestHeader(value = "X-User-Role", defaultValue = "ROLE_USER") String role) {
+        return ResponseEntity.ok(recipes);
+    }
 
-		List<RecipeResponseSummary> recipes = recipeServiceRead.searchRecipesByIngredients(List.of(ingredient), role);
+    @GetMapping("/search/ingredient")
+    public ResponseEntity<Object> searchRecipesByIngredient(@RequestParam String ingredient,
+            @RequestHeader(value = "X-User-Role", defaultValue = "ROLE_USER") String role) {
 
-		if (recipes == null || recipes.isEmpty()) {
-			return ResponseEntity.ok(Collections.emptyList());
-		}
+        List<RecipeResponseSummary> recipes = recipeServiceRead.searchRecipesByIngredients(List.of(ingredient), role);
 
-		return ResponseEntity.ok(recipes);
-	}
+        if (recipes == null || recipes.isEmpty()) {
+            return ResponseEntity.ok(Collections.emptyList());
+        }
 
-	@GetMapping("/todayMeal")
-	public ResponseEntity<List<RecipeResponseSummary>> getRecipesOfTheDay() {
+        return ResponseEntity.ok(recipes);
+    }
 
-		return ResponseEntity.ok(recipeServiceMenus.getRecipesOfTheDay());
-	}
+    @GetMapping("/todayMeal")
+    public ResponseEntity<List<RecipeResponseSummary>> getRecipesOfTheDay() {
 
-	@GetMapping("/search/ingredient/multiple")
-	public ResponseEntity<Object> searchRecipesByIngredientsMultiple(@RequestParam List<String> ingredients,
-			@RequestHeader(value = "X-User-Role", defaultValue = "ROLE_USER") String role) {
+        return ResponseEntity.ok(recipeServiceMenus.getRecipesOfTheDay());
+    }
 
-		if (ingredients == null || ingredients.isEmpty()) {
-			Map<String, Object> error = new HashMap<>();
-			error.put("status", 400);
-			error.put("message", "Debes enviar al menos un ingrediente");
-			return ResponseEntity.badRequest().body(error);
-		}
+    @GetMapping("/search/ingredient/multiple")
+    public ResponseEntity<Object> searchRecipesByIngredientsMultiple(@RequestParam List<String> ingredients,
+            @RequestHeader(value = "X-User-Role", defaultValue = "ROLE_USER") String role) {
 
-		List<RecipeResponseSummary> recipes = recipeServiceRead.searchRecipesByIngredientsMultiple(ingredients, role);
+        if (ingredients == null || ingredients.isEmpty()) {
+            Map<String, Object> error = new HashMap<>();
+            error.put("status", 400);
+            error.put("message", "Debes enviar al menos un ingrediente");
+            return ResponseEntity.badRequest().body(error);
+        }
 
-		if (recipes == null || recipes.isEmpty()) {
-			Map<String, Object> error = new HashMap<>();
-			error.put("status", 404);
-			error.put("message", "No se encuentran recetas con esos ingredientes");
-			return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
-		}
+        List<RecipeResponseSummary> recipes = recipeServiceRead.searchRecipesByIngredientsMultiple(ingredients, role);
 
-		return ResponseEntity.ok(recipes);
-	}
+        if (recipes == null || recipes.isEmpty()) {
+            Map<String, Object> error = new HashMap<>();
+            error.put("status", 404);
+            error.put("message", "No se encuentran recetas con esos ingredientes");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
+        }
 
-	@GetMapping("/names")
-	public ResponseEntity<List<String>> getRecipeNamesByIds(@RequestParam List<Integer> ids) {
-		return ResponseEntity.ok(recipeServiceRead.getRecipeNamesByIds(ids));
-	}
+        return ResponseEntity.ok(recipes);
+    }
 
-	@GetMapping("/breakfast")
-	public ResponseEntity<List<RecipeResponseSummary>> getBreakfastRecipes() {
-		return ResponseEntity.ok(recipeServiceMenus.getBreakfastRecipes());
-	}
+    @GetMapping("/names")
+    public ResponseEntity<List<String>> getRecipeNamesByIds(@RequestParam List<Integer> ids) {
+        return ResponseEntity.ok(recipeServiceRead.getRecipeNamesByIds(ids));
+    }
 
-	@GetMapping("/lunch")
-	public ResponseEntity<List<RecipeResponseSummary>> getLunchRecipes() {
-		return ResponseEntity.ok(recipeServiceMenus.getLunchRecipes());
-	}
+    @GetMapping("/breakfast")
+    public ResponseEntity<List<RecipeResponseSummary>> getBreakfastRecipes() {
+        return ResponseEntity.ok(recipeServiceMenus.getBreakfastRecipes());
+    }
 
-	@GetMapping("/dinner")
-	public ResponseEntity<List<RecipeResponseSummary>> getDinnerRecipes() {
-		return ResponseEntity.ok(recipeServiceMenus.getDinnerRecipes());
-	}
+    @GetMapping("/lunch")
+    public ResponseEntity<List<RecipeResponseSummary>> getLunchRecipes() {
+        return ResponseEntity.ok(recipeServiceMenus.getLunchRecipes());
+    }
 
-	@GetMapping("/snack")
-	public ResponseEntity<List<RecipeResponseSummary>> getSnackRecipes() {
-		return ResponseEntity.ok(recipeServiceMenus.getSnacksRecipes());
-	}
+    @GetMapping("/dinner")
+    public ResponseEntity<List<RecipeResponseSummary>> getDinnerRecipes() {
+        return ResponseEntity.ok(recipeServiceMenus.getDinnerRecipes());
+    }
 
-	@DeleteMapping("/{id}")
-	public ResponseEntity<Object> deleteRecipe(@PathVariable Integer id,
-			@RequestHeader(value = "X-User-Role", defaultValue = "") String role) {
+    @GetMapping("/snack")
+    public ResponseEntity<List<RecipeResponseSummary>> getSnackRecipes() {
+        return ResponseEntity.ok(recipeServiceMenus.getSnacksRecipes());
+    }
 
-		if (!isAdmin(role))
-			return forbidden();
-		recipeServiceDelete.deleteRecipe(id);
-		return ResponseEntity.noContent().build();
-	}
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Object> deleteRecipe(@PathVariable Integer id,
+            @RequestHeader(value = "X-User-Role", defaultValue = "") String role) {
+
+        if (!isAdmin(role)) {
+            return forbidden();
+        }
+        recipeServiceDelete.deleteRecipe(id);
+        return ResponseEntity.noContent().build();
+    }
 }
